# task4

./: AutoTest.cpp  AutoTest.h  CMakeLists.txt  LowestPriority.cpp  LowestPriority.h  Node.cpp  Node.h  func.cpp  func.h  main.cpp  text.txt
